--- a/index.html
+++ b/index.html
@@ -2,28 +2,36 @@
 <html lang="en" data-theme="synthwave">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor' class='w-6 h-6'%3E%3Cpath fill-rule='evenodd' d='M14.25 2.25c-.247 0-.495.02-.739.06-1.123.188-2.16.744-2.986 1.568L3.23 11.172c-.781.782-.781 2.047 0 2.828l6.295 6.295c.782.781 2.047.781 2.828 0l7.294-7.294c.824-.825 1.38-1.864 1.568-2.986.04-.244.06-.492.06-.739s-.02-.495-.06-.739c-.188-1.123-.744-2.16-1.568-2.986L14.25 2.25zM15 6.75a.75.75 0 000 1.5h.75a.75.75 0 000-1.5H15zM12 6A.75.75 0 0112.75 6.75v3.5h3.5a.75.75 0 010 1.5h-3.5v3.5a.75.75 0 01-1.5 0v-3.5H7.25a.75.75 0 010-1.5h3.5V6.75A.75.75 0 0112 6z' clip-rule='evenodd' /%3E%3C/svg%3E" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor' class='w-6 h-6'%3E%3Cpath fill-rule='evenodd' d='M14.25 2.25c-.247 0-.495.02-.739.06-1.123.188-2.16.744-2.986 1.568L3.23 11.172c-.781.782-.781 2.047 0 2.828l6.295 6.295c.782.781 2.047.781 2.828 0l7.294-7.294c.824-.825 1.38-1.864 1.568-2.986.04-.244.06-.492.06-.739s-.02-.495-.06-.739c-.188-1.123-.744-2.16-1.568-2.986L14.25 2.25zM15 6.75a.75.75 0 000 1.5h.75a.75.75 0 000-1.5H15zM12 6A.75.75 0 0112.75 6.75v3.5h3.5a.75.75 0 010 1.5h-3.5v3.5a.75.75 0 01-1.5 0v-3.5H7.25a.75.75 0 010-1.5h3.5V6.75A.75.75 0 0112 6z' clip-rule='evenodd' /%3E%3C/svg%3E"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Mastery Hub: 1000+ Problems & AI Tutor</title>
+    <title>JavaScript Mastery Hub: 1400+ Problems & AI Tutor</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto+Mono:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/index.css" />
     <style>
       /* Fallback font styles */
-      body, html {
-        font-family: 'Inter', sans-serif;
+      body,
+      html {
+        font-family: "Inter", sans-serif;
         scroll-behavior: smooth;
         height: 100%;
       }
       .font-mono {
-        font-family: 'Roboto Mono', monospace;
+        font-family: "Roboto Mono", monospace;
       }
       #root {
         height: 100%;
