--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
